# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.5
#

2004-11-18 22:06:07 GMT	John Goerzen <jgoerzen@complete.org>	patch-88

    Summary:
      Removed obsolete code
    Revision:
      missingh--head--0.5--patch-88


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser/Parser.hs


2004-11-18 22:04:31 GMT	John Goerzen <jgoerzen@complete.org>	patch-87

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.5--patch-87


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser/Parser.hs
     testsrc/ConfigParser/Parsertest.hs


2004-11-18 21:54:38 GMT	John Goerzen <jgoerzen@complete.org>	patch-86

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.5--patch-86


    modified files:
     ChangeLog


2004-11-18 21:54:22 GMT	John Goerzen <jgoerzen@complete.org>	patch-85

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.5--patch-85


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser/Parser.hs


2004-11-18 21:50:51 GMT	John Goerzen <jgoerzen@complete.org>	patch-84

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.5--patch-84


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser/Parser.hs
     testsrc/ConfigParser/Parsertest.hs


2004-11-18 20:12:40 GMT	John Goerzen <jgoerzen@complete.org>	patch-83

    Summary:
      Streamlined parser a bit
    Revision:
      missingh--head--0.5--patch-83


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser/Parser.hs


2004-11-18 20:08:19 GMT	John Goerzen <jgoerzen@complete.org>	patch-82

    Summary:
      Removed separate lexer
    Revision:
      missingh--head--0.5--patch-82


    new files:
     libsrc/MissingH/ConfigParser/Parser.hs

    removed files:
     libsrc/MissingH/ConfigParser/Lexer.hs
     libsrc/MissingH/ConfigParser/Parser.hs

    modified files: